[package]
name = "macro_script"
description = "tiny script for macro rules"
authors = ["Fancyflame<fancyflame@163.com>"]
repository = "https://github.com/Fancyflame/macro_script"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
